--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,21 @@
 			<url>http://www.spdx.org/licenses/LGPL-3.0</url>
 		</license>
 	</licenses>
+	<developers>
+		<developer>
+			<name>Felix Mannhardt</name>
+		</developer>
+	</developers>
 	<scm>
 		<url>https://github.com/andreas-solti/xeslite</url>
 		<connection>scm:git:git@github.com:andreas-solti/xeslite.git</connection>
-		<developerConnection>scm:git:ssh://github.com/andreas-solti/xeslite.git</developerConnection>
+		<developerConnection>scm:git:ssh://github-andreas-solti/xeslite.git</developerConnection>
 	</scm>
 	<issueManagement>
+		<system>github</system>
 		<url>https://github.com/andreas-solti/xeslite/issues</url>
 	</issueManagement>
+
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
@@ -49,10 +56,88 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<compilerArgs>
+						<arg>-Xlint:all</arg>
+						<!-- <arg>-Werror</arg> -->
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<failOnError>false</failOnError>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<!-- For the benefit of java-matrix-benchmark -->
+				<!-- mvn compile assembly:single -->
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.3.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<format>xml</format>
+					<maxmem>256m</maxmem>
+					<check>
+						<totalBranchRate>53</totalBranchRate>
+					</check>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+				<artifactId>maven-java-formatter-plugin</artifactId>
+				<version>0.4</version>
+				<configuration>
+					<configFile>.formatting.xml</configFile>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
